--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png" sizes="16x16" />
-    <title>MelVonPato</title>
+    <title>Melbaudon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
